subprojects {
    apply plugin: 'java'
    sourceCompatibility = 1.7
    targetCompatibility = 1.7
    group = 'org.funql.ri'
    version = 1.0

    repositories {
        mavenCentral()
        mavenRepo url: 'http://repository.jetbrains.com/all'
    }

    buildscript {
        repositories {
            mavenCentral()
            mavenRepo url: 'http://repository.jetbrains.com/all'
        }
        dependencies { classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:+' }
    }


    task copylibs(type: Sync) {
        into "$rootDir/alllibs"
        from configurations.testRuntime
        eachFile { println it.file.path }
        exclude { it.file.path.startsWith(rootDir.path) }
    }

    test {
        jvmArgs "-XX:MaxPermSize=512m"
    }


}

allprojects {
    task idelibs << {
        if (project.depth == 0)
            delete('idelibs')
        else {
            def runtimeLibs = new HashSet<File>()
            project.configurations.runtime.resolvedConfiguration.firstLevelModuleDependencies.each {
                if (!(it.name.startsWith(project.group) || it.name.contains("kotlin"))) {
                    it.allModuleArtifacts.each {
                        runtimeLibs.add(it.file)
                    }
                }
            }

            def testLibs = new HashSet<File>()
            project.configurations.testRuntime.resolvedConfiguration.firstLevelModuleDependencies.each {
                if (!it.name.startsWith(project.group) && !it.name.contains("kotlin")) {
                    it.allModuleArtifacts.each {
                        if (!runtimeLibs.contains(it.file)) {
                            testLibs.add(it.file)
                        }
                    }
                }
            }

            copy {
                from runtimeLibs
                into "$rootDir/idelibs/compile"
            }

            file("$rootDir/idelibs/compile").listFiles().each { println "  c $it" }
            copy {
                from testLibs
                into "$rootDir/idelibs/test"
            }
            file("$rootDir/idelibs/test").listFiles().each { println "  t $it" }
        }

    }

}


task wrapper(type: Wrapper) {
    gradleVersion = '1.4'
}

